# qserver

./: .gitignore  CMakeLists.txt  README.md  main.c  qserver-extension.c  qserver.c  qserver.h
include/: qserver-extension.h  qserver.h
